test: Git init test

--- a/coding-test-study.ipynb
+++ b/coding-test-study.ipynb
@@ -190,7 +190,8 @@
     "for i in range(0,n//4):\n",
     "    s=s+\"long \"\n",
     "s=s+\"int\"\n",
-    "print(s) "
+    "print(s) \n",
+    "# git init test"
    ]
   }
  ],
