--- a/coding-test-study.ipynb
+++ b/coding-test-study.ipynb
@@ -193,6 +193,64 @@
     "print(s) \n",
     "# git init test"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 3, 4, 5]\n",
+      "0\n",
+      "1\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 10807\n",
+    "n = int(input())\n",
+    "arr = list(map(int,input().split()))\n",
+    "v = int(input())\n",
+    "count=0\n",
+    "\n",
+    "for i in arr:\n",
+    "    if i==v:\n",
+    "        count+=1\n",
+    "\n",
+    "print(count)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 2 1 1 0\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 10810\n",
+    "n, m = list(map(int, input().split()))\n",
+    "\n",
+    "rule = [0 for _ in range(m)]\n",
+    "for i in range(m):\n",
+    "    rule[i] = list(map(int, input().split()))\n",
+    "\n",
+    "basket = list(0 for i in range(n))\n",
+    "\n",
+    "for i in rule:\n",
+    "    for j in range(i[0]-1,i[1]):\n",
+    "        basket[j]=i[2];\n",
+    "print(*basket)\n"
+   ]
   }
  ],
  "metadata": {
