test: Coding study-programmers

--- a/coding-test-study.ipynb
+++ b/coding-test-study.ipynb
@@ -545,17 +545,17 @@
    ],
    "source": [
     "# 10988\n",
-    "s=input()\n",
-    "checker=0\n",
-    "for i in range(0,len(s)//2):\n",
-    "    if s[i]==s[len(s)-1-i]:\n",
-    "        checker+=0\n",
+    "s = input()\n",
+    "checker = 0\n",
+    "for i in range(0, len(s)//2):\n",
+    "    if s[i] == s[len(s)-1-i]:\n",
+    "        checker += 0\n",
     "    else:\n",
-    "        checker+=1\n",
-    "if checker>0:\n",
+    "        checker += 1\n",
+    "if checker > 0:\n",
     "    print(0)\n",
     "else:\n",
-    "    print(1)"
+    "    print(1)\n"
    ]
   },
   {
@@ -574,8 +574,8 @@
    ],
    "source": [
     "# 25206\n",
-    "score=[]\n",
-    "for _ in range(20) :\n",
+    "score = []\n",
+    "for _ in range(20):\n",
     "    score.append(input().split())\n",
     "\n",
     "count = 0\n",
@@ -608,7 +608,7 @@
     "        elif grade == \"F\":\n",
     "            grade_score = 0.0\n",
     "        sum = sum+(float(credit)*float(grade_score))\n",
-    "        count=count+float(credit)\n",
+    "        count = count+float(credit)\n",
     "print(sum/count)\n"
    ]
   },
@@ -629,20 +629,20 @@
    ],
    "source": [
     "# 2738\n",
-    "a, b =[],[]\n",
-    "n,m = list(map(int,input().split()))\n",
+    "a, b = [], []\n",
+    "n, m = list(map(int, input().split()))\n",
     "\n",
     "for row in range(n):\n",
-    "    row = list(map(int,input().split()))\n",
+    "    row = list(map(int, input().split()))\n",
     "    a.append(row)\n",
     "for row in range(n):\n",
-    "    row = list(map(int,input().split()))\n",
+    "    row = list(map(int, input().split()))\n",
     "    b.append(row)\n",
     "\n",
     "for row in range(n):\n",
     "    for col in range(m):\n",
-    "       print(a[row][col] + b[row][col], end=' ')\n",
-    "    print()"
+    "        print(a[row][col] + b[row][col], end=' ')\n",
+    "    print()\n"
    ]
   },
   {
@@ -660,7 +660,7 @@
     }
    ],
    "source": [
-    "#2566\n",
+    "# 2566\n",
     "matrix = []\n",
     "for row in range(0, 9):\n",
     "    row = list(map(int, input().split()))\n",
@@ -679,6 +679,51 @@
     "\n",
     "print(value)\n",
     "print(row_num+1, col_num+1)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "L append b\n",
+      "['b']\n",
+      "L append a\n",
+      "['b', 'a']\n",
+      "pop a\n",
+      "['b']\n",
+      "pop b\n",
+      "[]\n",
+      "L append a\n",
+      "['a']\n",
+      "pop a\n",
+      "[]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Programmers - 짝지어 제거하기\n",
+    "s = \"baabaa\"\n",
+    "answer = 0\n",
+    "L = []\n",
+    "for i in s:\n",
+    "    if len(L) == 0:\n",
+    "        L.append(i)\n",
+    "        print(\"L append\", i)\n",
+    "    else:\n",
+    "        if L[-1] == i:\n",
+    "            print(\"pop\", L[-1])\n",
+    "            L.pop()\n",
+    "        else:\n",
+    "            L.append(i)\n",
+    "            print(\"L append\", i)\n",
+    "    print(L)\n",
+    "if len(L) == 0:\n",
+    "    answer = 1\n"
    ]
   }
  ],
