test: Coding study - programmers

--- a/coding-test-study.ipynb
+++ b/coding-test-study.ipynb
@@ -187,7 +187,7 @@
     "# 25314\n",
     "n = int(input())\n",
     "s = \"\"\n",
-    "for i in range(0, n//4):\n",
+    "for j in range(0, n//4):\n",
     "    s = s+\"long \"\n",
     "s = s+\"int\"\n",
     "print(s)\n",
@@ -216,8 +216,8 @@
     "v = int(input())\n",
     "count = 0\n",
     "\n",
-    "for i in arr:\n",
-    "    if i == v:\n",
+    "for j in arr:\n",
+    "    if j == v:\n",
     "        count += 1\n",
     "\n",
     "print(count)\n"
@@ -241,14 +241,14 @@
     "n, m = list(map(int, input().split()))\n",
     "\n",
     "rule = [0 for _ in range(m)]\n",
-    "for i in range(m):\n",
-    "    rule[i] = list(map(int, input().split()))\n",
+    "for j in range(m):\n",
+    "    rule[j] = list(map(int, input().split()))\n",
     "\n",
     "basket = list(0 for i in range(n))\n",
     "\n",
-    "for i in rule:\n",
-    "    for j in range(i[0]-1, i[1]):\n",
-    "        basket[j] = i[2]\n",
+    "for j in rule:\n",
+    "    for j in range(j[0]-1, j[1]):\n",
+    "        basket[j] = j[2]\n",
     "print(*basket)\n"
    ]
   },
@@ -271,13 +271,13 @@
     "basket = list(i+1 for i in range(n))\n",
     "\n",
     "rule = [0 for _ in range(m)]\n",
-    "for i in range(m):\n",
-    "    rule[i] = list(map(int, input().split()))\n",
+    "for j in range(m):\n",
+    "    rule[j] = list(map(int, input().split()))\n",
     "\n",
-    "for i in rule:\n",
-    "    temp = basket[i[0]-1]\n",
-    "    basket[i[0]-1] = basket[i[1]-1]\n",
-    "    basket[i[1]-1] = temp\n",
+    "for j in rule:\n",
+    "    temp = basket[j[0]-1]\n",
+    "    basket[j[0]-1] = basket[j[1]-1]\n",
+    "    basket[j[1]-1] = temp\n",
     "\n",
     "print(*basket)\n"
    ]
@@ -299,7 +299,7 @@
    "source": [
     "# 5597\n",
     "numbers = []\n",
-    "for i in range(0, 28):\n",
+    "for j in range(0, 28):\n",
     "    numbers.append(int(input()))\n",
     "compare_list = [i+1 for i in range(0, 30)]\n",
     "set1 = set(numbers)\n",
@@ -319,12 +319,12 @@
     "\n",
     "basket = [i+1 for i in range(0, n)]\n",
     "rule = [0 for _ in range(m)]\n",
-    "for i in range(m):\n",
-    "    rule[i] = list(map(int, input().split()))\n",
+    "for j in range(m):\n",
+    "    rule[j] = list(map(int, input().split()))\n",
     "\n",
-    "for i in rule:\n",
-    "    first = i[0]-1\n",
-    "    last = i[1]-1\n",
+    "for j in rule:\n",
+    "    first = j[0]-1\n",
+    "    last = j[1]-1\n",
     "    temp = [basket[k] for k in range(first, last+1)]\n",
     "    temp.reverse()\n",
     "    for j in range(first, last+1):\n",
@@ -348,8 +348,8 @@
    "source": [
     "# 27866\n",
     "s = input()\n",
-    "i = int(input())\n",
-    "print(s[i-1])\n"
+    "j = int(input())\n",
+    "print(s[j-1])\n"
    ]
   },
   {
@@ -388,11 +388,11 @@
     "# 9086\n",
     "T = int(input())\n",
     "test_case = []\n",
-    "for i in range(0, T):\n",
+    "for j in range(0, T):\n",
     "    test_case.append(input())\n",
     "\n",
-    "for i in test_case:\n",
-    "    print(i[0]+i[len(i)-1])\n"
+    "for j in test_case:\n",
+    "    print(j[0]+j[len(j)-1])\n"
    ]
   },
   {
@@ -455,8 +455,8 @@
     "chess = list(map(int, input().split()))\n",
     "compare = [1, 1, 2, 2, 2, 8]\n",
     "result = [0 for i in range(0, 6)]\n",
-    "for i in range(0, 6):\n",
-    "    result[i] = compare[i]-chess[i]\n",
+    "for j in range(0, 6):\n",
+    "    result[j] = compare[j]-chess[j]\n",
     "print(*result)\n"
    ]
   },
@@ -484,10 +484,10 @@
    "source": [
     "# 2444\n",
     "n = int(input())\n",
-    "for i in range(1, n):\n",
-    "    print(' '*(n-i) + '*'*(2*i-1))\n",
-    "for i in range(n, 0, -1):\n",
-    "    print(' '*(n-i) + '*'*(2*i-1))\n"
+    "for j in range(1, n):\n",
+    "    print(' '*(n-j) + '*'*(2*j-1))\n",
+    "for j in range(n, 0, -1):\n",
+    "    print(' '*(n-j) + '*'*(2*j-1))\n"
    ]
   },
   {
@@ -512,8 +512,8 @@
     "# 10812\n",
     "n, m = list(map(int, input().split()))\n",
     "rule = [0 for _ in range(m)]\n",
-    "for i in range(0, m):\n",
-    "    rule[i] = list(map(int, input().split()))\n",
+    "for j in range(0, m):\n",
+    "    rule[j] = list(map(int, input().split()))\n",
     "basket = [i for i in range(1, n+1)]\n",
     "for row in rule:\n",
     "    begin = row[0]-1\n",
@@ -547,8 +547,8 @@
     "# 10988\n",
     "s = input()\n",
     "checker = 0\n",
-    "for i in range(0, len(s)//2):\n",
-    "    if s[i] == s[len(s)-1-i]:\n",
+    "for j in range(0, len(s)//2):\n",
+    "    if s[j] == s[len(s)-1-j]:\n",
     "        checker += 0\n",
     "    else:\n",
     "        checker += 1\n",
@@ -710,20 +710,148 @@
     "s = \"baabaa\"\n",
     "answer = 0\n",
     "L = []\n",
-    "for i in s:\n",
+    "for j in s:\n",
     "    if len(L) == 0:\n",
-    "        L.append(i)\n",
-    "        print(\"L append\", i)\n",
+    "        L.append(j)\n",
+    "        print(\"L append\", j)\n",
     "    else:\n",
-    "        if L[-1] == i:\n",
+    "        if L[-1] == j:\n",
     "            print(\"pop\", L[-1])\n",
     "            L.pop()\n",
     "        else:\n",
-    "            L.append(i)\n",
-    "            print(\"L append\", i)\n",
+    "            L.append(j)\n",
+    "            print(\"L append\", j)\n",
     "    print(L)\n",
     "if len(L) == 0:\n",
     "    answer = 1\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Programmers - 카펫\n",
+    "def solution(brown, yellow):\n",
+    "    total = brown+yellow\n",
+    "    divisor = list([])\n",
+    "    for i in range(1, total+1):\n",
+    "        if (total % i == 0):\n",
+    "            divisor.append(i)\n",
+    "\n",
+    "    for i in range(0, len(divisor)):\n",
+    "        if ((divisor[i]-2)*(divisor[len(divisor)-i-1]-2) == yellow):\n",
+    "            answer = [divisor[i], divisor[len(divisor)-i-1]]\n",
+    "    return answer\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 97,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[50, 70]\n",
+      "[50]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "3"
+      ]
+     },
+     "execution_count": 97,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Programmers - 구명보트\n",
+    "def solution(people, limit):\n",
+    "    people = sorted(people)\n",
+    "    answer = 0\n",
+    "    i = 0\n",
+    "    j = len(people)-1\n",
+    "    while (i < j):\n",
+    "        if people[i]+people[j] > limit:\n",
+    "            people.pop()\n",
+    "        elif people[i]+people[j] <= limit:\n",
+    "            people.pop()\n",
+    "            i += 1\n",
+    "        j = len(people)-1\n",
+    "        answer += 1\n",
+    "    if i == j:\n",
+    "        answer += 1\n",
+    "    return answer\n",
+    "\n",
+    "\n",
+    "solution([70,  80, 50], 100)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 127,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 127,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Programmers - 예상 대진표\n",
+    "def solution(n, a, b):\n",
+    "    answer = 1\n",
+    "    while (a <= n and b <= n):\n",
+    "        if(abs(a-b) == 1 and a//2!=b//2):\n",
+    "            break\n",
+    "        print(a, b, answer)\n",
+    "        if a % 2 == 0:\n",
+    "            a = a//2\n",
+    "        elif a % 2 == 1:\n",
+    "            a = a//2+1\n",
+    "        if b % 2 == 0:\n",
+    "            b = b//2\n",
+    "        elif b % 2 == 1:\n",
+    "            b = b//2+1\n",
+    "        n = n/2\n",
+    "        answer += 1\n",
+    "\n",
+    "    return answer\n",
+    "\n",
+    "\n",
+    "solution(8, 1, 2)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 138,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "12"
+      ]
+     },
+     "execution_count": 138,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\n"
    ]
   }
  ],
