test: Coding study - programmers

--- a/coding-test-study.ipynb
+++ b/coding-test-study.ipynb
@@ -214,13 +214,13 @@
     "n = int(input())\n",
     "arr = list(map(int, input().split()))\n",
     "v = int(input())\n",
-    "count = 0\n",
+    "answer = 0\n",
     "\n",
     "for j in arr:\n",
     "    if j == v:\n",
-    "        count += 1\n",
+    "        answer += 1\n",
     "\n",
-    "print(count)\n"
+    "print(answer)\n"
    ]
   },
   {
@@ -578,7 +578,7 @@
     "for _ in range(20):\n",
     "    score.append(input().split())\n",
     "\n",
-    "count = 0\n",
+    "answer = 0\n",
     "sum = 0\n",
     "\n",
     "for row in score:\n",
@@ -608,8 +608,8 @@
     "        elif grade == \"F\":\n",
     "            grade_score = 0.0\n",
     "        sum = sum+(float(credit)*float(grade_score))\n",
-    "        count = count+float(credit)\n",
-    "print(sum/count)\n"
+    "        answer = answer+float(credit)\n",
+    "print(sum/answer)\n"
    ]
   },
   {
@@ -814,7 +814,7 @@
     "def solution(n, a, b):\n",
     "    answer = 1\n",
     "    while (a <= n and b <= n):\n",
-    "        if(abs(a-b) == 1 and a//2!=b//2):\n",
+    "        if (abs(a-b) == 1 and a//2 != b//2):\n",
     "            break\n",
     "        print(a, b, answer)\n",
     "        if a % 2 == 0:\n",
@@ -832,6 +832,104 @@
     "\n",
     "\n",
     "solution(8, 1, 2)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 1, 2, 3]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "3"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def solution(n):\n",
+    "    answer = 0\n",
+    "    array = [1]\n",
+    "    for i in range(0, n):\n",
+    "        if (i == 0):\n",
+    "            array.append(1)\n",
+    "        else:\n",
+    "            array.append(array[i]+array[i-1])\n",
+    "    answer = array[len(array)-1] % 1234567\n",
+    "\n",
+    "    return answer\n",
+    "\n",
+    "\n",
+    "solution(3)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 174,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 174,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def solution(s):\n",
+    "    answer = 0\n",
+    "    stack = []\n",
+    "    string_length = len(s)\n",
+    "    for i in range(string_length):\n",
+    "        s = s+s[0]\n",
+    "        s = s[1:len(s)]\n",
+    "        for j in range(string_length):\n",
+    "            if s[j] == \"(\" or s[j] == \"{\" or s[j] == \"[\":\n",
+    "                stack.append(s[j])\n",
+    "            else:\n",
+    "                if s[j] == \")\":\n",
+    "                    if len(stack) == 0:\n",
+    "                        stack.append(s[j])\n",
+    "                        continue\n",
+    "                    if stack[-1] == \"(\":\n",
+    "                        stack.pop()\n",
+    "                elif s[j] == \"}\":\n",
+    "                    if len(stack) == 0:\n",
+    "                        stack.append(s[j])\n",
+    "                        continue\n",
+    "                    if stack[-1] == \"{\":\n",
+    "                        stack.pop()\n",
+    "                elif s[j] == \"]\":\n",
+    "                    if len(stack) == 0:\n",
+    "                        stack.append(s[j])\n",
+    "                        continue\n",
+    "                    if stack[-1] == \"[\":\n",
+    "                        stack.pop()\n",
+    "                else:\n",
+    "                    stack.append(s[j])\n",
+    "        if len(stack) == 0:\n",
+    "            answer += 1\n",
+    "        else:\n",
+    "            stack.clear()\n",
+    "    return answer\n",
+    "\n",
+    "\n",
+    "solution(\"}}}\")\n"
    ]
   }
  ],
