test: Coding Study - programmers

--- a/coding-test-study.ipynb
+++ b/coding-test-study.ipynb
@@ -858,6 +858,7 @@
     }
    ],
    "source": [
+    "# Programmers - 멀리 뛰기\n",
     "def solution(n):\n",
     "    answer = 0\n",
     "    array = [1]\n",
@@ -891,6 +892,7 @@
     }
    ],
    "source": [
+    "# Programmers - 괄호 회전하기\n",
     "def solution(s):\n",
     "    answer = 0\n",
     "    stack = []\n",
@@ -930,6 +932,85 @@
     "\n",
     "\n",
     "solution(\"}}}\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Programmers - 귤 고르기\n",
+    "\n",
+    "def solution(k, tangerine):\n",
+    "    dedupe = list(set(tangerine))\n",
+    "    dic = {}\n",
+    "    for i in range(len(dedupe)):\n",
+    "        dic[dedupe[i]] = 0\n",
+    "\n",
+    "    for i in range(len(tangerine)):\n",
+    "        dic[tangerine[i]] += 1\n",
+    "\n",
+    "    values = sorted(dic.values(), reverse=True)\n",
+    "    sum = 0\n",
+    "\n",
+    "    for i in range(0, len(values)):\n",
+    "        sum += values[i]\n",
+    "        if sum >= k:\n",
+    "            return i+1\n",
+    "\n",
+    "\n",
+    "solution(2,[1, 1, 1, 1, 2, 2, 2, 3])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "50"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Programmers - [1차] 캐시\n",
+    "def solution(cacheSize, cities):\n",
+    "    answer = 0\n",
+    "    cache=[]\n",
+    "    \n",
+    "    for i in range(len(cities)):\n",
+    "        cities[i]=cities[i].lower()\n",
+    "\n",
+    "        if cities[i] in cache:\n",
+    "            answer+=1\n",
+    "            cache.remove(cities[i])\n",
+    "            cache.append(cities[i])\n",
+    "        else:\n",
+    "            answer+=5\n",
+    "            cache.append(cities[i])\n",
+    "            if len(cache)>cacheSize:\n",
+    "                cache.pop(0)\n",
+    "    return answer\n",
+    "\n",
+    "solution(3,[\"Jeju\", \"Pangyo\", \"Seoul\", \"NewYork\", \"LA\", \"Jeju\", \"Pangyo\", \"Seoul\", \"NewYork\", \"LA\"])"
    ]
   }
  ],
