test: Coding Study - programmers

--- a/coding-test-study.ipynb
+++ b/coding-test-study.ipynb
@@ -1012,6 +1012,97 @@
     "\n",
     "solution(3,[\"Jeju\", \"Pangyo\", \"Seoul\", \"NewYork\", \"LA\", \"Jeju\", \"Pangyo\", \"Seoul\", \"NewYork\", \"LA\"])"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[[15, 15], [15, 15], [15, 15]]"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Programmers - 행렬의 곱셈\n",
+    "import numpy as np\n",
+    "\n",
+    "def solution(arr1, arr2):\n",
+    "    arr_1=np.array(arr1)\n",
+    "    arr_2=np.array(arr2)\n",
+    "\n",
+    "    answer = arr_1@arr_2\n",
+    "\n",
+    "    return answer.tolist()\n",
+    "\n",
+    "solution([[1, 4], [3, 2], [4, 1]],[[3, 3], [3, 3]]\t)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[3, 2, 2, 3]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Programmers - n^2 배열 자르기\n",
+    "def solution(n, left, right):\n",
+    "    answer = []\n",
+    "\n",
+    "    for i in range(left,right+1):\n",
+    "        x=i//n\n",
+    "        y=i%n\n",
+    "        if x>=y:\n",
+    "            answer.append(x+1)\n",
+    "        else:\n",
+    "            answer.append(y+1)\n",
+    "    return(answer)\n",
+    "\n",
+    "solution(3,2,5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'headgear': ['yellow_hat', 'green_turban'], 'eyewear': ['blue_sunglasses']}"
+      ]
+     },
+     "execution_count": 59,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def solution(clothes):\n",
+    "    answer = 0\n",
+    "    clothes_dict=dict()\n",
+    "    for i in range(len(clothes)):\n",
+    "        if clothes[i][1] in clothes_dict:\n",
+    "            clothes_dict[clothes[i][1]].append(clothes[i][0])\n",
+    "        else:\n",
+    "            clothes_dict[clothes[i][1]]=[clothes[i][0]]\n",
+    "    return clothes_dict\n",
+    "\n",
+    "solution([[\"yellow_hat\", \"headgear\"], [\"blue_sunglasses\", \"eyewear\"], [\"green_turban\", \"headgear\"]])"
+   ]
   }
  ],
  "metadata": {
