--- a/coding-test-study.ipynb
+++ b/coding-test-study.ipynb
@@ -1076,33 +1076,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n",
+      "1\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "{'headgear': ['yellow_hat', 'green_turban'], 'eyewear': ['blue_sunglasses']}"
+       "5"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 69,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# Programmers - 위장\n",
     "def solution(clothes):\n",
-    "    answer = 0\n",
+    "    answer = 1\n",
     "    clothes_dict=dict()\n",
     "    for i in range(len(clothes)):\n",
     "        if clothes[i][1] in clothes_dict:\n",
     "            clothes_dict[clothes[i][1]].append(clothes[i][0])\n",
     "        else:\n",
     "            clothes_dict[clothes[i][1]]=[clothes[i][0]]\n",
-    "    return clothes_dict\n",
+    "    \n",
+    "    for i in clothes_dict.keys():\n",
+    "        print(len(clothes_dict[i]))\n",
+    "        answer*=(1+len(clothes_dict[i]))\n",
+    "    return answer-1\n",
     "\n",
     "solution([[\"yellow_hat\", \"headgear\"], [\"blue_sunglasses\", \"eyewear\"], [\"green_turban\", \"headgear\"]])"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
