test: Coding study - programmers

--- a/coding-test-study.ipynb
+++ b/coding-test-study.ipynb
@@ -2,10 +2,45 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 44,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1, 3, 2]"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def solution(progresses, speeds):\n",
+    "    answer = []\n",
+    "    progresses.reverse()\n",
+    "    speeds.reverse()\n",
+    "    count = 0\n",
+    "\n",
+    "    while (len(progresses) > 0):\n",
+    "        progresses = [x+y for x, y in zip(progresses, speeds)]\n",
+    "\n",
+    "        while len(progresses) > 0 and progresses[len(progresses)-1] >= 100:\n",
+    "            if progresses[len(progresses)-1] >= 100:\n",
+    "                progresses.pop()\n",
+    "                speeds.pop()\n",
+    "                count += 1\n",
+    "        \n",
+    "        answer.append(count)\n",
+    "        count = 0\n",
+    "\n",
+    "    answer = [i for i in answer if i != 0]\n",
+    "    return answer\n",
+    "\n",
+    "\n",
+    "solution([95, 90, 99, 99, 80, 99],[1, 1, 1, 1, 1, 1])\n"
+   ]
   }
  ],
  "metadata": {
