test: Coding study - programmers

--- a/coding-test-study.ipynb
+++ b/coding-test-study.ipynb
@@ -2,52 +2,47 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[1, 3, 2]"
+       "3"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "def solution(progresses, speeds):\n",
-    "    answer = []\n",
-    "    progresses.reverse()\n",
-    "    speeds.reverse()\n",
-    "    count = 0\n",
-    "\n",
-    "    while (len(progresses) > 0):\n",
-    "        progresses = [x+y for x, y in zip(progresses, speeds)]\n",
-    "\n",
-    "        while len(progresses) > 0 and progresses[len(progresses)-1] >= 100:\n",
-    "            if progresses[len(progresses)-1] >= 100:\n",
-    "                progresses.pop()\n",
-    "                speeds.pop()\n",
-    "                count += 1\n",
+    "# Programmers - 할인행사\n",
+    "def solution(want, number, discount):\n",
+    "    answer = 0\n",
+    "    i = 0\n",
+    "    while (len(discount)-i > 9):\n",
     "        \n",
-    "        answer.append(count)\n",
-    "        count = 0\n",
-    "\n",
-    "    answer = [i for i in answer if i != 0]\n",
+    "        temp_num = number.copy()\n",
+    "        for j in range(i, i+10):\n",
+    "            if discount[j] in want:\n",
+    "                temp_num[want.index(discount[j])] -= 1\n",
+    "        if any(temp_num) == False:\n",
+    "            answer += 1\n",
+    "        i += 1\n",
     "    return answer\n",
     "\n",
     "\n",
-    "solution([95, 90, 99, 99, 80, 99],[1, 1, 1, 1, 1, 1])\n"
+    "solution([\"banana\", \"apple\", \"rice\", \"pork\", \"pot\"], [3, 2, 2, 2, 1],\t[\"chicken\", \"apple\", \"apple\",\n",
+    "         \"banana\", \"rice\", \"apple\", \"pork\", \"banana\", \"pork\", \"rice\", \"pot\", \"banana\", \"apple\", \"banana\"])\n"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "conda",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "conda"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
